from commit d8b52bde1a288441a80f0529900d6b83a200534d @mario: fix fullscreen iframes on iOS

--- a/resource/support/css/mario.css
+++ b/resource/support/css/mario.css
@@ -941,6 +941,12 @@ body {
     padding:          20px;
 }
 
+/* needed for mobile Safari */
+*:-webkit-full-screen {
+    width:  100% !important;
+    height: 100% !important;
+}
+
 .reveal div.fs-container:fullscreen>iframe {
     border: none;
 }
@@ -952,18 +958,24 @@ body {
     top:              0px;
     right:            0px;
     cursor:           pointer;
+    outline:          none;
+    font-size:        20px;
+    width:            24px;
+    height:           24px;
     padding:          2px;
     border:           none;
+    border-radius:    4px;
+    opacity:          0.5;
+    color:            var(--whiteboard-inactive-color);
     background-color: rgba(255,255,255,0.5);
-    opacity:          0.2;
-    font-size:        20px;
-    outline:          none;
 }
 
 .reveal button.fs-button:hover { 
     opacity:          1.0;
+    color:            var(--whiteboard-active-color);
     background-color: rgba(255,255,255,0.8);
 }
+
 
 
 /*********************************************
